--- a/package.json
+++ b/package.json
@@ -11,19 +11,22 @@
   },
   "dependencies": {
     "@expo/webpack-config": "^19.0.0",
+    "@types/react": "~18.2.14",
     "expo": "^49.0.9",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.72.4",
-    "react-native-web": "~0.19.6"
+    "react-native-web": "~0.19.6",
+    "typescript": "^5.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
     "@babel/eslint-parser": "^7.22.15",
     "eslint": "^8.49.0",
     "eslint-plugin-react": "^7.33.2",
-    "eslint-plugin-react-native": "^4.1.0"
+    "eslint-plugin-react-native": "^4.1.0",
+    "prettier": "^3.0.3"
   },
   "private": true
 }
