--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "18.2.0",
     "react-native": "0.72.4",
     "react-native-web": "~0.19.6",
+    "react-router-native": "^6.18.0",
     "typescript": "^5.1.3"
   },
   "devDependencies": {
