--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react": "~18.2.14",
     "expo": "^49.0.9",
     "expo-status-bar": "~1.6.0",
+    "formik": "^2.4.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.72.4",
