--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-native": "0.72.4",
     "react-native-web": "~0.19.6",
     "react-router-native": "^6.18.0",
-    "typescript": "^5.1.3"
+    "typescript": "^5.1.3",
+    "yup": "^1.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
