--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@expo/metro-config": "^0.4.0",
     "@expo/webpack-config": "^19.0.0",
     "@types/react": "~18.2.14",
+    "dotenv": "^16.3.1",
     "expo": "^49.0.9",
     "expo-status-bar": "~1.6.0",
     "formik": "^2.4.5",
