--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "react-native-web": "~0.19.6",
     "react-router-native": "^6.18.0",
     "typescript": "^5.1.3",
-    "yup": "^1.3.2"
+    "yup": "^1.3.2",
+    "@react-native-async-storage/async-storage": "1.18.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
