--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@apollo/client": "^3.8.7",
     "@expo/metro-config": "^0.4.0",
     "@expo/webpack-config": "^19.0.0",
+    "@react-native-async-storage/async-storage": "1.18.2",
     "@types/react": "~18.2.14",
     "dotenv": "^16.3.1",
     "expo": "^49.0.9",
@@ -25,8 +26,7 @@
     "react-native-web": "~0.19.6",
     "react-router-native": "^6.18.0",
     "typescript": "^5.1.3",
-    "yup": "^1.3.2",
-    "@react-native-async-storage/async-storage": "1.18.2"
+    "yup": "^1.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
