--- a/package.json
+++ b/package.json
@@ -18,29 +18,31 @@
     "transformIgnorePatterns": [
       "node_modules/(?!((jest-)?react-native|@react-native(-community)?)|expo(nent)?|@expo(nent)?/.*|@expo-google-fonts/.*|react-navigation|@react-navigation/.*|@unimodules/.*|unimodules|sentry-expo|native-base|react-native-svg|react-router-native)"
     ],
-    "setupFilesAfterEnv": ["<rootDir>/setupTests.js"]
+    "setupFilesAfterEnv": [
+      "<rootDir>/setupTests.js"
+    ]
   },
   "dependencies": {
     "@apollo/client": "^3.8.7",
-    "@expo/metro-config": "^0.4.0",
-    "@expo/webpack-config": "^19.0.0",
-    "@react-native-async-storage/async-storage": "1.18.2",
-    "@types/react": "~18.2.14",
+    "@expo/metro-config": "~0.18.1",
+    "@expo/webpack-config": "~19.0.1",
+    "@react-native-async-storage/async-storage": "1.23.1",
+    "@types/react": "~18.2.79",
     "dotenv": "^16.3.1",
-    "expo": "^49.0.9",
-    "expo-status-bar": "~1.6.0",
+    "expo": "~51.0.2",
+    "expo-status-bar": "~1.12.1",
     "formik": "^2.4.5",
     "graphql": "^15.8.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.72.4",
-    "react-native-web": "~0.19.6",
+    "react-native": "0.74.1",
+    "react-native-web": "~0.19.10",
     "react-router-native": "^6.18.0",
-    "typescript": "^5.1.3",
+    "typescript": "~5.3.3",
     "yup": "^1.3.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9",
+    "@babel/core": "^7.24.0",
     "@babel/eslint-parser": "^7.22.15",
     "@testing-library/jest-native": "^5.4.3",
     "@testing-library/react-native": "^12.4.3",
@@ -49,7 +51,7 @@
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-native": "^4.1.0",
     "jest": "^29.7.0",
-    "jest-expo": "^49.0.0",
+    "jest-expo": "~51.0.1",
     "prettier": "^3.0.3",
     "react-test-renderer": "^18.2.0"
   },
