--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@types/react": "~18.2.79",
     "dotenv": "^16.3.1",
     "expo": "~51.0.2",
+    "expo-linking": "^6.3.1",
     "expo-status-bar": "~1.12.1",
     "formik": "^2.4.5",
     "graphql": "^15.8.0",
