--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@expo/metro-config": "~0.18.1",
     "@expo/webpack-config": "~19.0.1",
     "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-picker/picker": "^2.7.5",
     "@types/react": "~18.2.79",
     "date-fns": "^3.6.0",
     "dotenv": "^16.3.1",
