--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   "dependencies": {
     "@apollo/client": "^3.8.7",
     "@expo/metro-config": "~0.18.1",
-    "@expo/webpack-config": "~19.0.1",
+    "@expo/webpack-config": "^19.0.1",
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-picker/picker": "^2.7.5",
     "@types/react": "~18.2.79",
@@ -39,9 +39,11 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.1",
+    "react-native-paper": "^5.12.3",
     "react-native-web": "~0.19.10",
     "react-router-native": "^6.18.0",
     "typescript": "~5.3.3",
+    "use-debounce": "^10.0.1",
     "yup": "^1.3.2"
   },
   "devDependencies": {
